# challenge_frontend

./: .gitignore  Cargo.toml  README.md  challenge_frontend-23d186e2a45c56fd.js  index.html
.github/workflows/: rust.yml
assets/: sw.js
src/: lib.rs  main.rs  wrap_app.rs
src/apps/: app_windows.rs  binary_upload.rs  challenge_info.rs  code_editor.rs  file_upload.rs  login_app.rs  mod.rs  password_reset_app.rs  scoreboard_app.rs
src/background_processes/: challenge_fetcher.rs  login_handler.rs  mod.rs
src/code_editor/: editor.rs  mod.rs
src/components/: password.rs
src/helpers/: app_state.rs  challenges.rs  fetchers.rs  languages.rs  mod.rs  refresh.rs  submission.rs
