[package]
name = "challenge_frontend"
version = "0.5.2"
edition = "2021"
rust-version = "1.71"
authors = ["Philip Barlow"]
description = "Frontend app for our challenge server"
license = "MIT"
repository = "https://github.com/bitbrain-za/challenge_frontend"
homepage = "https://github.com/bitbrain-za/challenge_frontend"
readme = "README.md"


[dependencies]
egui = "0.23.0"
egui_extras = {version = "0.23.0", features = ["syntect"]}
eframe = { version = "0.23.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
scoreboard_db = "0.2.1"
gloo-net = { version = "0.4.0", features = ["json"] }
poll-promise = { version = "0.3", default-features = false, features = ["web"]}
serde_json = "1.0"
egui_commonmark = "0.9.0"
serde = { version = "1", features = ["derive"] }
web-sys = "0.3.64"
egui-notify = "0.10"
rfd = "0.11"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
